Chen Chen: fixed footer layout problem and changed web title color

--- a/static/assets/css/style1.css
+++ b/static/assets/css/style1.css
@@ -1,38 +1,17 @@
-/*
-@File: Covax Template Styles
 
-* This file contains the styling for the actual template, this
-is the file you need to edit to change the look of the
-template.
-
-This files table contents are outlined below>>>>>
-更多精品模板：http://www.bootstrapmb.com
-*******************************************
-*******************************************
-
-** - Default CSS
-** - Preloader Area CSS
-** - Navbar Area CSS
-** - Banner Area CSS
-** - About Area CSS
-** - Appointment Area CSS
-** - Special offer Area CSS
-** - Services How it works CSS
-** - Services Our team CSS
-** - Services Our gallery CSS
-** - Services Our News CSS
-** - Footer Area CSS
-
-*/
-/*================================================
-Default CSS
-=================================================*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 body {
   padding: 0;
   margin: 0;
   font-size: 15px;
   font-family: "Roboto", sans-serif;
+}
+.hidenhover {
+  display: none;
+}
+.blog-card + .hide {
+  display: block;
+  color: red;
 }
 
 a {
@@ -4284,7 +4263,7 @@ Page Banner Area CSS
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
-  height: 450px;
+  height: 250px;
   text-align: center;
   position: relative;
 }
